sunday night fixes from Recon in discord.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,3 +2,47 @@
   background-color: #272361 !important;
   color: white !important;
 }
+
+.styles-border-white {
+  border-color: white !important;
+}
+
+.styles-pink-text {
+  color: #ec1e79 !important;
+}
+
+.styles-pink {
+  background-color: #ec1e79 !important;
+}
+
+.styles-purple-text {
+  color: #272361 !important;
+}
+
+.styles-purple {
+  background-color: #272361 !important;
+}
+
+.styles-orange-text {
+  color: #f6921e !important;
+}
+
+.styles-orange {
+  background-color: #f6921e !important;
+}
+
+.styles-yellow-text {
+  color: #edea5f !important;
+}
+
+.styles-yellow {
+  background-color: #edea5f !important;
+}
+
+.styles-blue-text {
+  color: #00adee !important;
+}
+
+.styles-blue {
+  background-color: #00adee !important;
+}
