#10 - Updated fdonts, added pdf.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,11 @@
   color: white !important;
 }
 
+.styles-nfty-title {
+  font-family: 'Monoton';
+  letter-spacing: 3px !important;
+}
+
 .styles-border-white {
   border-color: white !important;
 }
