--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -44,6 +44,10 @@
   background-color: #edea5f !important;
 }
 
+.styles-green {
+  background-color: #1EEB4A !important;
+}
+
 .styles-blue-text {
   color: #00adee !important;
 }
